# fireplan_calendar_server

./: .gitignore  Cargo.toml  README.md  SECURITY.md  fireplan_alarm_imap.conf.template  fireplan_alarm_imap.service  fireplan_calendar_server.conf.template  fireplan_calendar_server.service  install.sh
.github/workflows/: rust-clippy.yml
src/: fireplan.rs  imap.rs  main.rs  parser.rs
