[package]
name = "fireplan_alarm_imap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
toml = "0.8.8"
imap = "2.4.1"
reqwest = "0.11.23"
simplelog = { version = "^0.12.1", features = ["paris"] }
paris = "1.5.15"
serde = { version = "1.0.195", features = ["derive"] }
serde_derive = "1.0.195"