[package]
name = "fireplan_alarm_imap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
toml = "0.8.8"
imap = "2.4.1"
reqwest = { version = "0.11.23", features = ["json", "blocking"]}
simplelog = { version = "^0.12.1", features = ["paris"] }
paris = "1.5.15"
serde = { version = "1.0.195", features = ["derive"] }
serde_derive = "1.0.195"
native-tls = "0.2.11"
anyhow = "1.0.79"
mail-parser = "0.9.2"
regex = "1.10.2"
serde_json = "1.0.111"