[package]
name = "fireplan_calendar_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
toml = "0.9.5"
reqwest = { version = "0.12.1", features = ["json", "blocking"]}
simplelog = { version = "^0.12.1", features = ["paris"] }
paris = "1.5.15"
serde = { version = "1.0.195", features = ["derive"] }
serde_derive = "1.0.195"
native-tls = "0.2.11"
anyhow = "1.0.79"
mail-parser = "0.11.0"
regex = "1.10.2"
homedir = "0.3.4"
serde_json = "1.0.111"
derive-getters = "0.5.0"
icalendar = "0.17.1"
chrono ="0.4.28"